# physics-toy

./: .gitignore  Cargo.toml  README.md  profile_capture(2024-10-29.12-02-44).opt  profile_capture(2024-10-29.12-06-24).opt  profile_capture(2024-10-29.12-07-39).opt  profile_capture(2024-10-29.12-11-04).opt  profile_capture(2024-10-29.12-14-04).opt  profile_capture(2024-10-29.12-16-53).opt  profile_capture(2024-10-29.12-19-05).opt  profile_capture(2024-10-29.12-21-51).opt  profile_capture(2024-10-29.12-24-08).opt
captures/: toy-physics(2024-10-29.15-07-43).opt  toy-physics(2024-10-29.15-10-17).opt  toy-physics(2024-10-29.15-16-08).opt  toy-physics(2024-10-29.15-28-43).opt  toy-physics(2024-10-29.15-52-00).opt  toy-physics(2024-10-29.16-04-36).opt  toy-physics(2024-10-29.16-05-31).opt  toy-physics(2024-10-29.16-07-09).opt  toy-physics(2024-10-29.16-40-14).opt  toy-physics(2024-10-29.16-41-09).opt  toy-physics(2024-10-29.16-47-21).opt  toy-physics(2024-10-29.16-48-52).opt  toy-physics(2024-10-29.16-50-26).opt  toy-physics(2024-10-29.16-56-39).opt  toy-physics(2024-10-29.16-57-19).opt  toy-physics(2024-10-29.16-58-04).opt  toy-physics(2024-10-29.17-00-23).opt  toy-physics(2024-10-29.17-00-53).opt  toy-physics(2024-10-29.17-01-49).opt  toy-physics(2024-10-30.09-35-57).opt  toy-physics(2024-10-30.12-57-37).opt  toy-physics(2024-10-30.15-56-35).opt  toy-physics(2024-10-30.16-29-36).opt  toy-physics(2024-10-30.16-41-39).opt  toy-physics(2024-10-30.16-42-51).opt  toy-physics(2024-10-30.16-45-08).opt  toy-physics(2024-10-30.16-51-41).opt  toy-physics(2024-10-30.16-58-57).opt  (+15 more)
(+23 files in other folders)
