[package]
name = "toy_physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
educe = "0.6.0"
glow = "0.14.1"
glutin = "0.32.1"
glutin-winit = "0.5.0"
rand = "0.8.5"
soa-rs = "0.7.2"
winit = "0.30.5"
