[package]
name = "toy_physics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
educe = "0.6.0"
rand = "0.8.5"
soa-rs = "0.7.2"
winit = "0.29"
log = "0.4.22"
wgpu = "22.1.0"
env_logger = "0.11.5"
pollster = "0.3.0"
bytemuck = "1.19.0"
image = "0.25.2"
