[package]
name = "toy_physics"
version = "0.1.0"
edition = "2021"
description = "A toy physics engine"
repository = "https://github.com/crawley-dev/toy-physics"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
soa-rs = "0.7.2"
winit = "0.29"        # old version on purpose
log = "0.4.22"
wgpu = "22.1.0"
env_logger = "0.11.5"
pollster = "*"
bytemuck = "1.19.0"
image = "0.25.4"
num = "0.4.3"
rayon = "1.10.0"
optick = "1.3.4"

[dependencies.educe]
version = "*"
features = ["Debug"]
default-features = false
